[package]
name="AoC19"
version="0.0.1"
author="FeldiM"

[[bin]]
name = "day1"
path="day_01/main.rs"

[[bin]]
name = "day2"
path="day_02/main.rs"

[[bin]]
name = "day3"
path="day_03/main.rs"

[[bin]]
name = "day4"
path="day_04/main.rs"

[[bin]]
name = "day5"
path="day_05/main.rs"

[[bin]]
name = "day6"
path="day_06/main.rs"

[[bin]]
name = "day7"
path="day_07/main.rs"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
text_io = "0.1.7"
