[package]
name="AoC19"
version="0.0.1"
authors=["FeldiM"]

[[bin]]
name = "day1"
path="day_01/main.rs"

[[bin]]
name = "day2"
path="day_02/main.rs"

[[bin]]
name = "day3"
path="day_03/main.rs"

[[bin]]
name = "day4"
path="day_04/main.rs"

[[bin]]
name = "day5"
path="day_05/main.rs"

[[bin]]
name = "day6"
path="day_06/main.rs"

[[bin]]
name = "day7"
path="day_07/main.rs"

[[bin]]
name = "day8"
path="day_08/main.rs"

[[bin]]
name = "day9"
path="day_09/main.rs"

[[bin]]
name = "day10"
path="day_10/main.rs"

[[bin]]
name = "day11"
path="day_11/main.rs"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
ordered-float = "1.0.2"
text_io = "0.1.7"
colored = "1.9.0"
